docs(plan): Update project plan with new goal

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -44,4 +44,4 @@ The agent hangs when started with 'air' but works with 'go run'. Added detailed 
 - Investigated and added logging to chat handler to fix frontend display issues with Gemini responses.
 
 ## Current Goal
-Debugging chat frontend response display and ensuring proper Markdown rendering from Gemini API.
+Thoroughly test the agent's new multi-step task handling capabilities and explore adding more complex tools to expand its functionality.
