--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -39,6 +39,7 @@ The agent hangs when started with 'air' but works with 'go run'. Added detailed 
 ## Changes on 2025-07-27
 - Added logging to geminiAPIHandler, chat handler, and main function to improve debugging of tool chaining and API interactions.
 - Enhanced system prompt to strictly require JSON for tool calls or Markdown for final responses, ensuring better iterative tool execution.
+- Changed configuration file format from JSON to INI format. Updated both agent.go and toolserver.go to use INI parsing with gopkg.in/ini.v1 package. Changed write_dir key to CHROOT_DIR in [default] section.
 
 ## Debugging Response Display Issue
 - Investigated and added logging to chat handler to fix frontend display issues with Gemini responses.
