tools: introduce dynamic tool registry and modularize tools\n\n- Add ToolExecutor and registry-based dispatcher in toolserver.go\n- Move disk_space tool to tools/disk_space.go with init() registration\n- Move write_file tool to tools/write_file.go with init() registration\n- Keep tool metadata and executors decoupled; GET lists tools dynamically\n- Update .windsurf_plan.md with summary and next steps

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -46,3 +46,15 @@ The agent hangs when started with 'air' but works with 'go run'. Added detailed 
 
 ## Current Goal
 Thoroughly test the agent's new multi-step task handling capabilities and explore adding more complex tools to expand its functionality.
+
+## Changes on 2025-08-08
+- Refactored tools to be modular with dynamic discovery/dispatch:
+  - Introduced a registry-based dispatcher in `tools/toolserver.go` using `toolExecutors` and `tools` maps.
+  - Moved `disk_space` implementation to `tools/disk_space.go` and registered via `init()`.
+  - Moved `write_file` implementation to `tools/write_file.go` and registered via `init()`.
+  - Simplified `toolserver.go` to keep shared types, HTTP handlers, and empty registries.
+
+## Next Steps (Follow-up)
+1. Add new tools by creating a file in `tools/` with an `init()` that registers both metadata and executor.
+2. Add basic unit tests for tool executors.
+3. Validate `GET /api/tools` lists all registered tools and `POST` dispatch works end-to-end.
