observability: add persistent debug logging and Jira HTTP tracing\n\n- agent: initialize multi-writer logging to debug.log + stdout; route Gin logs to same writer; add Agent->Tools request/response logs\n- tools/toolserver: log incoming POST raw bodies and outgoing JSON responses\n- tools/jira_search_issues: log raw Jira HTTP request (method, URL, headers with Authorization masked, POST body) and response (status, headers, capped body); buffer body for both logging and JSON decode\n- .gitignore: ignore debug.log and *.log\n\nThis enables end-to-end tracing of tool calls and Jira interactions and helped diagnose the 400 by revealing an auth/token issue.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -54,7 +54,19 @@ Thoroughly test the agent's new multi-step task handling capabilities and explor
   - Moved `write_file` implementation to `tools/write_file.go` and registered via `init()`.
   - Simplified `toolserver.go` to keep shared types, HTTP handlers, and empty registries.
 
+- Updated `agent.go` to discover and execute tools dynamically via the tool server, now embedded in-process:
+  - `getAvailableTools()` now calls `GET http://127.0.0.1:8080/api/tools` and renders the dynamic list.
+  - `executeTool()` now posts tool calls to `POST /api/tools` and returns the server response.
+  - The Gemini system prompt's "Available Tools" section is built at runtime from the live registry (so new tools like `jira_search_issues` are immediately usable without agent changes).
+  - Implemented `/tool` command parsing to delegate execution to the tool server and `/tools` to list the live set.
+
+### Developer Experience Improvements
+- The tool server has been converted into a reusable package (`tools`) and is now started inside `agent.go` (as a goroutine) on `:8080`. Running `air` in the project root starts BOTH the agent and the tool server automatically.
+- No need to run a separate tool server process.
+
 ## Next Steps (Follow-up)
 1. Add new tools by creating a file in `tools/` with an `init()` that registers both metadata and executor.
 2. Add basic unit tests for tool executors.
 3. Validate `GET /api/tools` lists all registered tools and `POST` dispatch works end-to-end.
+4. Add an integration test for `agent.go` to ensure it correctly reflects the tool server's registry in prompts and delegates execution.
+5. Document required config for `jira_search_issues` (`JIRA_URL`, `JIRA_TOKEN`, optional `JIRA_EMAIL`).
