--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -45,7 +45,7 @@ The agent hangs when started with 'air' but works with 'go run'. Added detailed 
 - Investigated and added logging to chat handler to fix frontend display issues with Gemini responses.
 
 ## Current Goal
-Thoroughly test the agent's new multi-step task handling capabilities and explore adding more complex tools to expand its functionality.
+Add Jira tools for transitioning issues: list available transitions and perform a transition, wired into the agent tool system. Then test multi-step flows (get transitions -> transition issue).
 
 ## Changes on 2025-08-08
 - Refactored tools to be modular with dynamic discovery/dispatch:
@@ -60,13 +60,18 @@ Thoroughly test the agent's new multi-step task handling capabilities and explor
   - The Gemini system prompt's "Available Tools" section is built at runtime from the live registry (so new tools like `jira_search_issues` are immediately usable without agent changes).
   - Implemented `/tool` command parsing to delegate execution to the tool server and `/tools` to list the live set.
 
+### Jira Transitions Tools (2025-08-08)
+- Added `jira_get_transitions` tool to fetch available transitions for an issue, supporting query params: `expand`, `transitionId`, `skipRemoteOnlyCondition`, `includeUnavailableTransitions`, `sortByOpsBarAndStatus`.
+- Added `jira_transition_issue` tool to perform a transition, supporting body keys: `transition`, `fields`, `update`, `properties`, `historyMetadata` and convenience `transitionId`.
+  - Registered both tools in `tools/jira_issue_ops.go` with help text and parameters.
+
 ### Developer Experience Improvements
 - The tool server has been converted into a reusable package (`tools`) and is now started inside `agent.go` (as a goroutine) on `:8080`. Running `air` in the project root starts BOTH the agent and the tool server automatically.
 - No need to run a separate tool server process.
 
 ## Next Steps (Follow-up)
-1. Add new tools by creating a file in `tools/` with an `init()` that registers both metadata and executor.
-2. Add basic unit tests for tool executors.
-3. Validate `GET /api/tools` lists all registered tools and `POST` dispatch works end-to-end.
-4. Add an integration test for `agent.go` to ensure it correctly reflects the tool server's registry in prompts and delegates execution.
-5. Document required config for `jira_search_issues` (`JIRA_URL`, `JIRA_TOKEN`, optional `JIRA_EMAIL`).
+1. Encourage the agent to call `jira_get_transitions` before `jira_transition_issue` when transition id is unknown (prompt hint or chain-of-thought hinting via tool loop).
+2. Add basic unit tests for the two executors.
+3. Validate `GET /api/tools` lists the new tools and `POST /api/tools` dispatch works end-to-end.
+4. Add an integration test for `agent.go` multi-step flow (list transitions then transition).
+5. Document required config for all Jira tools (`JIRA_URL`, `JIRA_TOKEN`, optional `JIRA_EMAIL`).
