feat(jira): add Jira user-management tools and register with tool server
- Implement tools in tools/jira_users.go:
  * jira_users_all (GET /rest/api/3/users/search)
  * jira_users_assignable_multi (GET /rest/api/3/user/assignable/multiProjectSearch)
  * jira_users_assignable (GET /rest/api/3/user/assignable/search)
  * jira_users_permission_search (GET /rest/api/3/user/permission/search)
  * jira_user_picker (GET /rest/api/3/user/picker)
  * jira_users_search (GET /rest/api/3/user/search)
  * jira_users_search_query (GET /rest/api/3/user/search/query)
  * jira_users_search_query_key (GET /rest/api/3/user/search/query/key)
  * jira_users_viewissue_search (GET /rest/api/3/user/viewissue/search)

- Read JIRA_URL/JIRA_TOKEN/JIRA_EMAIL from INI config; mask auth in logs; simplify user shapes when possible
- Update .windsurf_plan.md with new tools, notes, and next steps
- chore(agent): increase Gemini tool-loop maxIterations from 5 to 30 for longer multi-step flows

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -102,3 +102,26 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 - Removed the embedded HTML/JS chat UI from `agent.go` (`GET /`). The endpoint now returns a JSON health/info payload.
 - The React/Vite SPA under `web/` is the only UI moving forward. During local dev, Vite proxies `/chat` and `/webhook` to `127.0.0.1:7866`.
 - For production, build the SPA (`web/dist`) and deploy via Cloudflare Workers (configured in `wrangler.toml`).
+
+## Jira User Tools (2025-08-09)
+- Implemented multiple Jira user-management tools in `tools/jira_users.go`, registered via `init()` so the agent discovers them dynamically:
+  - `jira_users_all` (GET /rest/api/3/users/search)
+  - `jira_users_assignable_multi` (GET /rest/api/3/user/assignable/multiProjectSearch)
+  - `jira_users_assignable` (GET /rest/api/3/user/assignable/search)
+  - `jira_users_permission_search` (GET /rest/api/3/user/permission/search)
+  - `jira_user_picker` (GET /rest/api/3/user/picker)
+  - `jira_users_search` (GET /rest/api/3/user/search)
+  - `jira_users_search_query` (GET /rest/api/3/user/search/query)
+  - `jira_users_search_query_key` (GET /rest/api/3/user/search/query/key)
+  - `jira_users_viewissue_search` (GET /rest/api/3/user/viewissue/search)
+
+### Notes
+- All tools read `JIRA_URL`, `JIRA_TOKEN`, and optional `JIRA_EMAIL` from the INI config (`[default]` section).
+- Responses prefer simplified user fields when possible and fall back to raw JSON for resiliency.
+- HTTP logs mask Authorization headers and truncate large bodies.
+
+### Next Steps
+1. Add unit tests for each executor with mocked HTTP.
+2. Provide usage examples in the system prompt so Gemini can pick the correct user tool.
+3. End-to-end test via `/tool` posts and through the chat tool loop.
+4. Optionally add POST variants where Jira supports it (if needed for large queries).
