tools: add secure shell_exec tool bound to CHROOT_DIR
Execute commands via /bin/sh -lc within CHROOT_DIR, with optional workdir validation and timeout. Returns stdout, stderr, and exit_code. Update CHANGELOG and plan.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -125,3 +125,19 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 2. Provide usage examples in the system prompt so Gemini can pick the correct user tool.
 3. End-to-end test via `/tool` posts and through the chat tool loop.
 4. Optionally add POST variants where Jira supports it (if needed for large queries).
+
+## shell_exec Tool (2025-08-09)
+- Added `tools/shell_exec.go` implementing a secure shell execution tool constrained to `CHROOT_DIR`.
+- Behavior:
+  - Executes `/bin/sh -lc "<command>"` with working directory defaulting to `CHROOT_DIR` or a validated subdirectory `--workdir`.
+  - Enforces chroot boundary using `filepath.Abs`, `Clean`, and `Rel` checks (same pattern as `read_file`/`write_file`).
+  - Supports `--timeout_sec` (default 60s, clamped to [1, 600]).
+  - Returns `{ stdout, stderr, exit_code, workdir, command }` and treats non-zero exit as successful call with exit_code for caller inspection.
+
+### Prompt/Agent
+- No prompt changes required. The agent discovers the tool dynamically and lists it in the “Available Tools” section for Gemini.
+
+### Next Steps
+1. Add tests covering: workdir validation, timeout behavior, non-zero exit handling, and output capture.
+2. Document usage in README with examples and CHROOT guidance.
+3. Optionally add environment variable allowlist for commands if needed later.
