sandbox(shell_exec): run commands inside Arch Linux Docker container; add container lifecycle helpers and graceful shutdown
- tools/docker_start.go: add dockerStop, StopDockerContainer, RemoveDockerContainer
- tools/shell_exec.go: execute via docker exec with CHROOT_DIR mounted at /app
- agent.go: stop container on shutdown; optional auto-remove via DOCKER_AUTO_REMOVE
- config.ini.sample: document DOCKER_AUTO_REMOVE
- docs: update .windsurf_plan.md and CHANGELOG.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -141,3 +141,31 @@ Add Jira tools for transitioning issues: list available transitions and perform 
 1. Add tests covering: workdir validation, timeout behavior, non-zero exit handling, and output capture.
 2. Document usage in README with examples and CHROOT guidance.
 3. Optionally add environment variable allowlist for commands if needed later.
+
+## docker_start Tool (2025-08-09)
+- Added `tools/docker_start.go` to start an Arch-based Docker container with the configured `CHROOT_DIR` mounted at `/app` inside the container.
+- Behavior:
+  - Runs `docker run -d --name <name> -v CHROOT_DIR:/app -w /app <image> sleep infinity`.
+  - Defaults: `name=go-thing-arch`, `image=archlinux:latest`. Optional `--extra_args` pass-through for advanced flags.
+  - Validates `CHROOT_DIR` from `~/.config/go-thing/config.ini` `[default]` section.
+- Usage examples:
+  - `/tool docker_start`
+  - `/tool docker_start --name my-arch --extra_args "--privileged"`
+
+### Next Steps
+1. Add a complementary `docker_exec` helper to run a command inside the container (e.g., `docker exec -it <name> bash`).
+2. Add a `docker_stop`/`docker_rm` tool for lifecycle management.
+3. Document prerequisites (Docker installed, user in docker group) in README.
+
+## Docker Sandbox + Lifecycle Integration (2025-08-09)
+- Sandbox: `shell_exec` now runs inside an Arch Linux Docker container via `docker exec`, mapping `CHROOT_DIR` from the host to `/app` in the container and translating working directories accordingly. This isolates filesystem-touching commands from the host.
+- Lifecycle helpers:
+  - `StopDockerContainer()` and `RemoveDockerContainer(force bool)` added in `tools/docker_start.go`.
+  - Added internal `dockerStop(name string)` helper.
+- Agent shutdown: `agent.go` now best-effort stops the container on SIGINT/SIGTERM, and removes it when `[default] DOCKER_AUTO_REMOVE=true` in `~/.config/go-thing/config.ini`.
+- Config sample: Added commented `DOCKER_AUTO_REMOVE` key to `config.ini.sample`.
+
+Next:
+1. Add tests for lifecycle helpers and `shell_exec` Docker execution path.
+2. Document Docker prerequisites and usage in README (including `CHROOT_DIR` mapping and optional `DOCKER_EXTRA_ARGS`).
+3. Consider explicit admin tool endpoints to stop/remove the container manually if needed.
