feat(db): integrate PostgreSQL with startup migrations and migration CLI (GTHING-9)
Add internal PostgreSQL support and simple file-based migration engine. Database is optional; agent continues running if DB is not configured or connection fails.

Changes:

- agent.go: init DB on startup via [postgres] INI section, run migrations; add migrate CLI (up/down/status); add getAPIAddr(); mask sensitive tokens in config logs; log applied config; read DOCKER_AUTO_REMOVE once; use API_ADDR from config.

- db/postgres.go: parse INI [postgres], build DSN for pgx stdlib, open and ping connection.

- db/migrate.go: implement file-based migrations with schema_migrations table; support .up.sql/.down.sql pairs and legacy .sql; status reporting and step-wise up/down.

- migrations/: add example 0001_init.sql and 0001_init.down.sql.

- config.sample.ini: provide postgres config and MIGRATIONS_DIR option.

- README.md: document DB config and migration CLI usage.

- CHANGELOG.md, .windsurf_plan.md: record changes and plan.

- go.mod/go.sum: add github.com/jackc/pgx/v5 and dependencies.

Notes: This is an internal DB integration (not exposed as a tool). API and tools servers remain unchanged for existing users; defaults preserved (API_ADDR=0.0.0.0:7866, TOOLS_ADDR=:8080).

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -20,6 +20,28 @@
 1. Enhance `agent.go` chat interface for better tool integration.
 2. Test the write_file functionality.
 
+## PostgreSQL Integration (2025-08-09)
+### Goal
+- Add internal PostgreSQL support (not exposed as a tool) and run SQL migrations at startup.
+
+### Plan
+- Create `db/` package:
+  - `postgres.go`: parse `[postgres]` in INI, build DSN, open `database/sql` using `pgx` stdlib driver, ping.
+  - `migrate.go`: simple file-based migrations (`schema_migrations` table, lexicographic `.sql` files`).
+- Wire into `main()` in `agent.go`: on startup, load INI, init DB, run migrations from `MIGRATIONS_DIR` (default `./migrations`). Continue running even if DB is not configured or connection fails.
+- Provide `config.sample.ini` and an example migration under `migrations/`.
+
+### Done
+- Implemented `db/postgres.go` and `db/migrate.go`.
+- Added `github.com/jackc/pgx/v5` to `go.mod` and `go mod tidy` passes; `go build` succeeds.
+- Integrated DB init + `RunMigrations` in `agent.go` startup with logs.
+- Added `migrations/0001_init.sql` example file.
+- Added `config.sample.ini` with `[postgres]` example.
+- Updated README with configuration and migration notes.
+ - Added migration CLI in `agent.go`: `migrate up [--step N]`, `migrate down --step N`, `migrate status`.
+ - Enhanced migration engine to support `.up.sql`/`.down.sql` conventions, stepwise up/down, and status reporting.
+ - Added example down migration `migrations/0001_init.down.sql`.
+
 ## Debugging Agent Hanging Issue
 The agent hangs when started with 'air' but works with 'go run'. Added detailed logs and flushed output to diagnose. Addressing lint errors (unreachable code, defers). Cause may be Air's signal handling or buffering.
 
