db: simplify conversation storage schema (threads/messages only); add runtime persistence\n\n- migrations: 0002 now creates threads and messages only; down drops them\n- docs: update .windsurf_plan.md and CHANGELOG to reflect two-table design\n- agent: create thread at startup; persist user/assistant messages from /chat and Slack into messages (JSONB metadata)\n- use db.Get() for inserts; auto-create thread if missing

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -42,6 +42,13 @@
  - Enhanced migration engine to support `.up.sql`/`.down.sql` conventions, stepwise up/down, and status reporting.
  - Added example down migration `migrations/0001_init.down.sql`.
 
+### Conversation storage migrations (2025-08-09)
+- Added `migrations/0002_conversations_threads_messages.up.sql` to create tables:
+  - `threads` (id, title, created_at, updated_at)
+  - `messages` (id, thread_id FK, role, content, metadata JSONB, created_at)
+- Added `migrations/0002_conversations_threads_messages.down.sql` to drop `messages` then `threads`.
+- Indexed `messages(thread_id)` and `messages(created_at)` for common queries.
+
 ## Debugging Agent Hanging Issue
 The agent hangs when started with 'air' but works with 'go run'. Added detailed logs and flushed output to diagnose. Addressing lint errors (unreachable code, defers). Cause may be Air's signal handling or buffering.
 
