feat(agent): persist current_context across threads; sanitize CHROOT paths; clarify Docker/ephemeral environment in prompt
- Persist context:
  - Add getLastContextForThread(threadID) to load last assistant metadata.current_context using JSONB filters
  - /chat and Slack: load initialCtx, call geminiAPIHandler(ctx, msg, initialCtx), persist updatedCtx in assistant message metadata
  - geminiAPIHandler now returns (finalText, updatedCtx, error) and merges/trims context each iteration

- Sanitize CHROOT paths:
  - Add getChrootDir(), normalizePathInText(), sanitizeContextFacts()
  - Sanitize persisted context before injecting into prompt; sanitize model-provided context before merging and before persisting

- Prompt improvements:
  - Enforce JSON-only schema with current_context/tool/args/final
  - Add “Execution Environment (IMPORTANT)” section: chroot=/app, only /app paths, ephemeral state, recreate state as needed

- Logging + robustness:
  - Expanded logs for initial/merged/persisted context and Gemini prompt/response
  - Update processUserMessage to new handler signature

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -198,3 +198,26 @@ Next:
 1. Add tests for lifecycle helpers and `shell_exec` Docker execution path.
 2. Document Docker prerequisites and usage in README (including `CHROOT_DIR` mapping and optional `DOCKER_EXTRA_ARGS`).
 3. Consider explicit admin tool endpoints to stop/remove the container manually if needed.
+
+## Current Context Memory (2025-08-10)
+### Goal
+- Let the model maintain a concise rolling context in JSON under `current_context` (and accept legacy `current_content`), and have the agent persist and resend it on future turns.
+
+### Changes
+- Updated `agent.go`:
+  - `callGeminiAPI(...)` now receives `persistedContext []string` and injects a "Persisted Context (current_context)" section into the system prompt. Path: `agent.go` function `callGeminiAPI()`.
+  - System prompt updated to instruct the model to optionally include `current_context` in tool-call JSON, with guidance to pick/prune only high-signal facts (<= 8 items). Path: `agent.go` in `callGeminiAPI()` system prompt assembly.
+  - Extended `ToolCall` struct to parse `current_context` and `current_content` arrays. Added helper `GetMergedContext()` and `mergeStringSets()` to dedupe and merge. Path: `agent.go`.
+  - `geminiAPIHandler(...)` now maintains a rolling `currentContext []string`, merges new context from each tool-call JSON, and passes it back into `callGeminiAPI(...)` on subsequent iterations. Path: `agent.go`.
+
+### Behavior
+- Model may return tool-call JSON like:
+  ```json
+  {"tool":"write_file","args":{"path":"/app/repo/README.md","content":"..."},"current_context":["the working dir is /app/repo/","you're using Arch, btw, as root","you can install whatever you need","the last packages installed was npm and nodejs"]}
+  ```
+- Agent extracts `current_context` (and `current_content` if present), merges/dedupes, keeps up to the last 8 facts, and includes them in subsequent prompts.
+- Final Markdown responses are unchanged; only tool-call JSON may include the optional `current_context` key.
+
+### Notes
+- Build verified: `go build ./...` succeeds.
+- Also removed a duplicate/partial `geminiAPIHandler` definition and a stray line in `processUserMessage()` to fix syntax lints.
