fix(agent): propagate error from callGeminiAPI in geminiAPIHandler
- Return original error instead of nil after logging to allow callers to handle failures
- Preserve currentContext when final response is empty to persist model-updated context
- Refactor getLastAssistantContextForThread: remove redundant filtering; caller sanitizes via sanitizeContextFacts

docs(plan): record error propagation fix in .windsurf_plan.md

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -233,3 +233,8 @@ Next:
 - Fixed regression in `handleSlackMessage()` where errors from `geminiAPIHandler(...)` were logged but processing continued.
 - New behavior: on error, log, send a friendly Slack message ("Sorry, I encountered an error. Please try again."), respond to HTTP with `{status: "error_processed"}`, and `return` early to avoid persisting/sending invalid replies.
 - Affected code: `agent.go` function `handleSlackMessage()`.
+
+## Error Propagation Fix (2025-08-10)
+- In `geminiAPIHandler(...)`, errors returned by `callGeminiAPI(...)` were logged but suppressed by returning `nil` as the error value.
+- Update: now returns the original `err` to the caller: `return "An error occurred while calling the LLM.", currentContext, err`.
+- Impact: callers (e.g., HTTP handlers, Slack handler) can correctly detect failures and handle them instead of proceeding as if successful.
