agent: simplify geminiAPIHandler error returns and remove unused processUserMessage
- Return empty message string on all error paths in geminiAPIHandler; callers already build user-facing errors from the error object
- Remove unused processUserMessage() after Slack path switched to call geminiAPIHandler directly
- Update .windsurf_plan.md to document error propagation change

Build: go build ./... OK

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -236,5 +236,5 @@ Next:
 
 ## Error Propagation Fix (2025-08-10)
 - In `geminiAPIHandler(...)`, errors returned by `callGeminiAPI(...)` were logged but suppressed by returning `nil` as the error value.
-- Update: now returns the original `err` to the caller: `return "An error occurred while calling the LLM.", currentContext, err`.
+- Update: now returns the original `err` to the caller and an empty message string: `return "", currentContext, err`.
 - Impact: callers (e.g., HTTP handlers, Slack handler) can correctly detect failures and handle them instead of proceeding as if successful.
