agent: propagate request-scoped context and cache context size
- Slack: use c.Request.Context() in handleSlackMessage() when calling geminiAPIHandler()
  to propagate cancellation on client disconnect (prevents orphaned work).
- Performance: cache CURRENT_CONTEXT_MAX_ITEMS using sync.Once in getContextMaxItems()
  to avoid repeated config reads/parsing in the Gemini tool loop.
- Docs: update .windsurf_plan.md with request-context and config-read optimization notes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -238,3 +238,12 @@ Next:
 - In `geminiAPIHandler(...)`, errors returned by `callGeminiAPI(...)` were logged but suppressed by returning `nil` as the error value.
 - Update: now returns the original `err` to the caller and an empty message string: `return "", currentContext, err`.
 - Impact: callers (e.g., HTTP handlers, Slack handler) can correctly detect failures and handle them instead of proceeding as if successful.
+
+## Request Context Propagation (2025-08-10)
+- Updated `agent.go` `handleSlackMessage()` to pass `c.Request.Context()` into `geminiAPIHandler(...)` instead of `context.Background()`.
+- Benefit: respects client disconnect/cancellation and avoids orphaned work; aligns with best practices for request-scoped cancellation in Gin.
+
+## Config Read Optimization (2025-08-10)
+- Cached `CURRENT_CONTEXT_MAX_ITEMS` using `sync.Once` and a package-level variable in `agent.go`'s `getContextMaxItems()`.
+- Rationale: avoid repeated config file access and string parsing inside the `geminiAPIHandler` loop (hot path).
+- Note: value is fixed for process lifetime (consistent with config load via `sync.Once`).
