agent: simplify ToolCall.GetMergedContext
- Replace verbose merge logic with a single call to mergeStringSets(tc.CurrentContext, tc.CurrentContent).
- Update .windsurf_plan.md to record the minor refactor.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -247,3 +247,7 @@ Next:
 - Cached `CURRENT_CONTEXT_MAX_ITEMS` using `sync.Once` and a package-level variable in `agent.go`'s `getContextMaxItems()`.
 - Rationale: avoid repeated config file access and string parsing inside the `geminiAPIHandler` loop (hot path).
 - Note: value is fixed for process lifetime (consistent with config load via `sync.Once`).
+
+## Minor Refactor (2025-08-10)
+- Simplified `ToolCall.GetMergedContext()` to directly return `mergeStringSets(tc.CurrentContext, tc.CurrentContent)`.
+- Rationale: reduce verbosity; `mergeStringSets` already handles empty/nil slices.
