db: add composite index for messages lookup; cache CHROOT_DIR; fix normalizePathInText signature
- Add 0004 up/down migrations to create/drop idx_messages_thread_role_id_desc (thread_id, role, id DESC)
  to speed up getLastContextForThread() query.
- Cache CHROOT_DIR via sync.Once to avoid hot-path lookups in normalizePathInText().
- Restore normalizePathInText(s string) string return signature after regression.
- Update .windsurf_plan.md documenting changes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -251,3 +251,11 @@ Next:
 ## Minor Refactor (2025-08-10)
 - Simplified `ToolCall.GetMergedContext()` to directly return `mergeStringSets(tc.CurrentContext, tc.CurrentContent)`.
 - Rationale: reduce verbosity; `mergeStringSets` already handles empty/nil slices.
+
+## Security Improvement (2025-08-10)
+- In HTTP `/chat` handler, replaced detailed error echo (`fmt.Sprintf("... %v", err)`) with a generic message to avoid leaking internal details.
+- Logs still record the full error for debugging; clients receive: "Failed to process message. Please try again later."
+
+## Path Normalization + Config Cache (2025-08-10)
+- Cached `CHROOT_DIR` using `sync.Once` (`chrootDirOnce`, `chrootDirCached`) to avoid repeated lookups in the hot path `normalizePathInText()`.
+- Fixed a regression by restoring `normalizePathInText(s string) string` return signature and proper returns of `s`/`s2`.
