--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -259,3 +259,11 @@ Next:
 ## Path Normalization + Config Cache (2025-08-10)
 - Cached `CHROOT_DIR` using `sync.Once` (`chrootDirOnce`, `chrootDirCached`) to avoid repeated lookups in the hot path `normalizePathInText()`.
 - Fixed a regression by restoring `normalizePathInText(s string) string` return signature and proper returns of `s`/`s2`.
+
+## DB Index Optimization (2025-08-10)
+- Added composite index for query optimizing latest assistant message lookups:
+  - Up: `migrations/0004_messages_thread_role_id_idx.up.sql`
+    - `CREATE INDEX IF NOT EXISTS idx_messages_thread_role_id_desc ON messages (thread_id, role, id DESC);`
+  - Down: `migrations/0004_messages_thread_role_id_idx.down.sql`
+    - `DROP INDEX IF EXISTS idx_messages_thread_role_id_desc;`
+- Rationale: speeds up `getLastContextForThread()` in `agent.go` which filters by `thread_id` and `role` and orders by `id DESC LIMIT 1`.
