perf(agent): pre-allocate slice in mergeStringSets to reduce allocations; docs(plan): note optimization

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -228,6 +228,7 @@ Next:
   - Function: `normalizePathInText()` in `agent.go`
   - Variable: `doubleSlashRegex = regexp.MustCompile(([^:])//+)` defined at package scope
   - Benefit: Minor reduction in CPU and allocations when normalizing many strings (hot path for context and messages).
+- Also pre-allocated the result slice in `mergeStringSets()` in `agent.go` using `make([]string, 0, len(base)+len(extra))` to reduce allocations during context merging.
 
 ## Slack Error Handling Fix (2025-08-10)
 - Fixed regression in `handleSlackMessage()` where errors from `geminiAPIHandler(...)` were logged but processing continued.
