utility: robust tool POST handling
- Handle json.Marshal error for tool payload
- Use bytes.NewReader for request body
- Replace ioutil.ReadAll with io.ReadAll and handle error
- Return error on non-2xx responses with body snippet

Docs: note changes in .windsurf_plan.md (Robustness Fixes 2025-08-11)

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -292,6 +292,15 @@ Next:
 - Cleaned up imports and removed duplicates from `agent.go`.
 - Build verified: `go build ./...`.
 
+## Robustness Fixes (2025-08-11)
+- Updated `utility/tools.go` `ExecuteTool()` to improve reliability and error propagation:
+  - Handle `json.Marshal` error for the request payload and return a wrapped error.
+  - Use `bytes.NewReader` for HTTP request body instead of converting to string.
+  - Replace deprecated `ioutil.ReadAll` with `io.ReadAll` and handle its error.
+  - Return a clear error on non-2xx HTTP responses (include status and body snippet).
+- Imports updated to use `bytes` and `io`; removed deprecated `ioutil` import.
+- Verified with `go build ./...`.
+
 ### Follow-up (2025-08-10)
 - Moved Slack helpers/handlers under `utility/` to reduce top-level clutter and decouple from `main` internals:
   - `utility/slack.go`: `SendSlackResponse()`
