shell_session: persistent PTY bash + robust sentinel parsing; return effective cwd via PWD sentinel. Add WebSocket/REST endpoints for shared shell sessions; graceful shutdown. Update plan with enhancements. Add creack/pty dependency and prompt guidance for stateful shells.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -199,6 +199,53 @@ Next:
 2. Document Docker prerequisites and usage in README (including `CHROOT_DIR` mapping and optional `DOCKER_EXTRA_ARGS`).
 3. Consider explicit admin tool endpoints to stop/remove the container manually if needed.
 
+## Interactive Shell Broker (2025-08-11)
+### Goal
+- Provide persistent interactive shells inside the Docker container that multiple clients can share concurrently (Agent logic, browsers, third-party apps), while maintaining shell state across commands.
+
+### Implementation
+- Added `tools/shell_broker.go` implementing a broker and `ShellSession`:
+  - Single docker `bash` per session via `docker exec -it -w <workdir> <container> /bin/bash`.
+  - Input multiplexing: session `inputQueue chan []byte` serializes all inputs.
+  - Output broadcasting: subscribers per session receive real-time stdout/stderr.
+  - Lifecycle: `CreateOrGet(id, subdir)`, `List()`, `Close(id)`; graceful shutdown on agent exit.
+- Extended `agent.go` with REST + WebSocket endpoints:
+  - `GET /shell/sessions` list active session IDs.
+  - `POST /shell/sessions {id, subdir}` create or get a session; `subdir` maps under `CHROOT_DIR` to `/app/<subdir>`.
+  - `DELETE /shell/sessions/:id` close a session.
+  - `GET /shell/ws/:id` WebSocket to attach: send text/binary as input; receive binary output frames.
+- Reused existing Docker lifecycle from `tools/docker_start.go` (`EnsureDockerContainer`) and chroot mapping to `/app`.
+
+### Usage Examples
+- Create a session targeting repo root and attach from a browser or app:
+  1) `POST /shell/sessions {"id":"dev","subdir":""}`
+  2) Connect WebSocket to `/shell/ws/dev`, then send commands like `ls -la` (newline auto-appended server-side).
+- Multiple clients can connect to the same session and see shared state/output.
+- Create separate sessions for long-running processes (e.g., server logs) while continuing interactive work in another.
+
+### Notes
+- Output frames are raw terminal bytes (TTY enabled); clients should render appropriately (xterm.js recommended).
+- Inputs are newline-terminated if not already; for interactive UIs, send full lines.
+ - Env for the shell is cleared for safety; container provides environment.
+
+### Enhancements (2025-08-11)
+- Switched Docker exec bash sessions to use a real PTY via `github.com/creack/pty` in `tools/shell_broker.go`, fixing the "input device is not a TTY" issue and enabling proper interactive behavior.
+- Improved sentinel-based parsing in `tools/shell_session_tool.go`:
+  - Wrap commands with unique start/end sentinels using `printf` and normalize newlines.
+  - Strip ANSI escape sequences from PTY output before parsing to avoid control code interference.
+  - Anchor sentinel detection on line boundaries and handle split-chunk accumulation.
+- Added post-command PWD sentinel so the tool returns the effective working directory:
+  - Emits a `__PWD__<tag><cwd>` line between start and end sentinels using `printf '%s%s\n'` with `$(pwd)`.
+  - Response data now includes `cwd` (effective after the command) in addition to `workdir` (initial session dir) and `output`.
+  - Fallback logic retains partial output if the end sentinel isn't observed within timeout.
+
+### Next Steps
+1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
+2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
+3. Client focus/lock semantics to avoid interleaved typing conflicts.
+4. Structured event protocol (JSON frames) optionally wrapping raw stream for metadata.
+5. Persist minimal session metadata in DB if needed.
+
 ## Current Context Memory (2025-08-10)
 ### Goal
 - Let the model maintain a concise rolling context in JSON under `current_context` (and accept legacy `current_content`), and have the agent persist and resend it on future turns.
