security: restrict WebSocket origins to prevent CSWSH via CheckOrigin allowlist and same-origin fallback; config: add [default] ALLOWED_ORIGINS in config.sample.ini; fix: avoid double-close panic in /shell/ws by guarding done with sync.Once; refactor: deduplicate PWD extraction in shell_session tool via extractCwdAndTrim(); docs: update .windsurf_plan.md with Security Hardening notes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -418,3 +418,10 @@ Next:
 - Updated `agent.go` to call `utility.GeminiAPIHandler` and pass it into Slack handler.
 - Removed old root files: `gemini.go`, `context_limits.go`.
 - Build verified: `go build ./...`.
+
+## Security Hardening (2025-08-11)
+- Locked down WebSocket upgrader origin checks to mitigate CSWSH:
+  - Replaced permissive `CheckOrigin: func(...) bool { return true }` with `isAllowedWSOrigin` in `agent.go`.
+  - `isAllowedWSOrigin` allows origins from `[default] ALLOWED_ORIGINS` (comma-separated) or falls back to same-origin (`http(s)://<host>`).
+  - Added `ALLOWED_ORIGINS` to `config.sample.ini` with examples.
+- Build verified: `go build ./...`.
