shell: prevent data loss and zombie sessions
- tools/shell_session_tool.go: rewrite extractCwdAndTrim to split lines, remove only the last PWD sentinel, and rejoin. Fixes mid-stream truncation when sentinel appears between outputs.
- tools/shell_broker.go: on read errors (including EOF), log/broadcast error and call s.Close() to fully tear down the session, preventing writer-only zombie sessions.
- docs: update .windsurf_plan.md with the 2025-08-12 fix notes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -239,6 +239,12 @@ Next:
   - Response data now includes `cwd` (effective after the command) in addition to `workdir` (initial session dir) and `output`.
   - Fallback logic retains partial output if the end sentinel isn't observed within timeout.
 
+### Fix (2025-08-12)
+- File: `tools/shell_session_tool.go`
+- Change: Replaced `extractCwdAndTrim` logic to split output by lines, find the last PWD sentinel line, remove only that line, and rejoin the rest.
+- Reason: Previous implementation could truncate output after the sentinel when it appeared mid-stream, causing data loss.
+- Result: Preserves all legitimate output while still extracting `cwd`. Build verified with `go build ./...`.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
