WS origin check: cache ALLOWED_ORIGINS with sync.Once; avoid per-request parsing on WebSocket upgrades; fallback to same-origin when unset. Update .windsurf_plan.md.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -431,3 +431,10 @@ Next:
   - `isAllowedWSOrigin` allows origins from `[default] ALLOWED_ORIGINS` (comma-separated) or falls back to same-origin (`http(s)://<host>`).
   - Added `ALLOWED_ORIGINS` to `config.sample.ini` with examples.
 - Build verified: `go build ./...`.
+
+## Performance Optimization (2025-08-12)
+- Cached WebSocket origin allowlist in `agent.go` to avoid per-request parsing:
+  - Added package-level cache: `allowedOrigins map[string]struct{}` and `allowedOriginsOnce sync.Once`.
+  - Updated `isAllowedWSOrigin()` to populate the cache on first call and use it thereafter; falls back to same-origin if no allowlist is set.
+  - Benefit: reduces allocations and CPU on the WebSocket upgrade hot path.
+  - Build verified: `go build ./...`.
