shell: fix TTY write race and optimize session read timeout
- tools/shell_broker.go: add writeMu to ShellSession and guard write() to prevent concurrent writes between input loop and Close() sending exit. Improves reliability on POSIX and avoids unspecified io.Writer concurrency.
- tools/shell_session_tool.go: replace polling time.After with single time.NewTimer for timeout; break outer ReadLoop on channel close; keep accumulator/tail handling. Fix small lint.
- .windsurf_plan.md: document concurrency fix and related notes under Interactive Shell Broker (2025-08-12).

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -245,6 +245,12 @@ Next:
 - Reason: Previous implementation could truncate output after the sentinel when it appeared mid-stream, causing data loss.
 - Result: Preserves all legitimate output while still extracting `cwd`. Build verified with `go build ./...`.
 
+### Concurrency Fix (2025-08-12)
+- File: `tools/shell_broker.go`
+- Change: Added `writeMu sync.Mutex` to `ShellSession` and guarded `write()` to serialize writes to the PTY.
+- Reason: Prevent potential race between the writer loop (input queue) and `Close()` sending `exit\n`.
+- Result: Eliminates concurrent writes to the TTY; `go build ./...` passes.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
