shell_broker: refactor Subscribe/Unsubscribe for clarity; remove raw PTY payload logging to prevent secret leakage; update .windsurf_plan.md with Security + Readability note (2025-08-12)

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -251,6 +251,14 @@ Next:
 - Reason: Prevent potential race between the writer loop (input queue) and `Close()` sending `exit\n`.
 - Result: Eliminates concurrent writes to the TTY; `go build ./...` passes.
 
+### Security + Readability (2025-08-12)
+- File: `tools/shell_broker.go`
+- Changes:
+  - Refactored `Subscribe()` and `Unsubscribe()` to use clear lock/defer-unlock patterns instead of dense one-liners.
+  - Removed raw payload from PTY read logging to avoid secret leakage; now only logs byte count.
+- Reason: Improve maintainability and prevent accidental exposure of sensitive output in logs.
+- Result: Build verified with `go build ./...`.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
