WebSocket origin check: log config load failure and fallback; fix stray unicode in agent.go. Update .windsurf_plan.md with Observability Improvement entry (2025-08-12).

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -452,3 +452,9 @@ Next:
   - Updated `isAllowedWSOrigin()` to populate the cache on first call and use it thereafter; falls back to same-origin if no allowlist is set.
   - Benefit: reduces allocations and CPU on the WebSocket upgrade hot path.
   - Build verified: `go build ./...`.
+
+## Observability Improvement (2025-08-12)
+- File: `agent.go`
+- Change: Added an explicit error log in `isAllowedWSOrigin()` when `utility.LoadConfig()` fails while reading `ALLOWED_ORIGINS`, noting fallback to same-origin policy.
+- Reason: Avoid silent fallback that could confuse operators when CORS appears broken due to config load issues.
+- Result: Clear log line `[ShellWS] failed to load config for allowed origins: <err>. Falling back to same-origin policy.`
