--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -245,6 +245,12 @@ Next:
 - Reason: Previous implementation could truncate output after the sentinel when it appeared mid-stream, causing data loss.
 - Result: Preserves all legitimate output while still extracting `cwd`. Build verified with `go build ./...`.
 
+### Minor Simplification (2025-08-12)
+- File: `tools/shell_session_tool.go`
+- Change: Removed redundant inner `if len(s) > tailKeep` in large-output tail handling since the outer `if acc.Len() > tailKeep` guarantees it.
+- Reason: Simplify logic without changing behavior.
+- Result: Cleaner code; build verified.
+
 ### Readability Simplification (2025-08-12)
 - File: `tools/shell_session_tool.go`
 - Change: Simplified final `cwd` resolution after `extractCwdAndTrim(...)` by directly assigning `cwdDetected = cwd` with a fallback to `sess.Workdir`.
@@ -264,6 +270,12 @@ Next:
   - Removed raw payload from PTY read logging to avoid secret leakage; now only logs byte count.
 - Reason: Improve maintainability and prevent accidental exposure of sensitive output in logs.
 - Result: Build verified with `go build ./...`.
+
+### Subscriber Notification Fix (2025-08-12)
+- File: `tools/shell_broker.go`
+- Change: In `ShellSession.Close()`, close all subscriber channels under `subsMu` and clear the `subscribers` map.
+- Reason: Prevent goroutine leaks in WebSocket handlers waiting on now-orphaned channels when a session terminates.
+- Result: Subscribers are unblocked promptly; safe against races with `Unsubscribe`.
 
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
