ws(shell): close conn on writer error to unblock reader; fix potential goroutine leak\n\n- agent.go: in /shell/ws writer goroutine, log WriteMessage error, Close() the conn, then signal done\n- Prevents reader loop from blocking on ReadMessage after writer fails\n\nplan: document WS fix; prior commits already covered shell_broker subscriber close and session tool simplification

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -277,6 +277,12 @@ Next:
 - Reason: Prevent goroutine leaks in WebSocket handlers waiting on now-orphaned channels when a session terminates.
 - Result: Subscribers are unblocked promptly; safe against races with `Unsubscribe`.
 
+### WebSocket Writer Leak Fix (2025-08-12)
+- File: `agent.go`
+- Change: In shell WS writer goroutine, on `WriteMessage` error, log and explicitly `conn.Close()` before signaling done. Ensures the reader loop unblocks (ReadMessage returns) and the handler exits cleanly.
+- Reason: Prevent goroutine leaks when the writer fails but the reader remains blocked.
+- Result: Graceful termination of both goroutines on write errors; build verified.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
