shell: make Enqueue non-blocking with backpressure handling
- tools/shell_broker.go: Enqueue now returns bool (non-blocking); drop when queue full
- agent.go: WS handler detects full queue, sends [backpressure] notice, drops input
- tools/shell_session_tool.go: return ToolResponse error when enqueue fails so caller can retry
- docs: update .windsurf_plan.md with summary of change

Build: go build ./... passes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -283,6 +283,12 @@ Next:
 - Reason: Prevent goroutine leaks when the writer fails but the reader remains blocked.
 - Result: Graceful termination of both goroutines on write errors; build verified.
 
+### Backpressure: Non-blocking Enqueue (2025-08-12)
+- Files: `tools/shell_broker.go`, `agent.go`, `tools/shell_session_tool.go`
+- Change: Made `ShellSession.Enqueue([]byte) bool` non-blocking; it returns `false` when the input queue is full. The WebSocket handler now detects a full queue, sends a `[backpressure]` notice to the client, and drops the input. The shell session tool returns a `ToolResponse` error so callers can retry.
+- Reason: Prevent blocking the WebSocket read loop when a fast client overwhelms a slow shell, avoiding resource leaks and DoS risk.
+- Result: Backpressure is handled gracefully without stalling; `go build ./...` passes.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
