ws: add heartbeat (read deadline + pong) and close-on-backpressure in shell WS handler
- Detect dead clients via 60s pong deadline
- On input queue saturation, send Close(PolicyViolation) and exit loop
- Update plan with details

Build: go build ./... passes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -289,6 +289,12 @@ Next:
 - Reason: Prevent blocking the WebSocket read loop when a fast client overwhelms a slow shell, avoiding resource leaks and DoS risk.
 - Result: Backpressure is handled gracefully without stalling; `go build ./...` passes.
 
+### WebSocket Heartbeat + Close-on-Backpressure (2025-08-12)
+- File: `agent.go`
+- Change: Added read deadlines and a `SetPongHandler` to implement a 60s heartbeat for `/shell/ws/:id`. On input-queue saturation, the server sends a Close frame (PolicyViolation) and exits the loop.
+- Reason: Detect dead clients to prevent goroutine leaks and fail fast under sustained backpressure instead of stalling.
+- Result: Healthier WS connections; handlers terminate promptly on dead peers or overload. Build passes.
+
 ### Next Steps
 1. Authentication/authorization for `/shell/*` endpoints; session ACLs/read-only mode.
 2. Optional session TTL/idle timeout and explicit `stop/remove` container admin endpoints.
