shell_session: remove risky end sentinel fallback; rely on newline-anchored detection\n\n- tools/shell_session_tool.go: drop fallback matching endMark without preceding newline to avoid premature truncation. The wrapper prints sentinels with trailing \n via printf, so end sentinel is always on its own line.\n- .windsurf_plan.md: add 'End Sentinel Robustness (2025-08-12)' entry documenting the change and rationale.\n\nBuild: verified with 'go build ./...'

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -257,6 +257,12 @@ Next:
 - Reason: Improve clarity and reduce conditional verbosity without changing behavior.
 - Result: Same behavior with clearer intent; build verified with `go build ./...`.
 
+### End Sentinel Robustness (2025-08-12)
+- File: `tools/shell_session_tool.go`
+- Change: Removed fallback detection of `endMark` without a preceding newline. Now we only consider the newline-anchored pattern (`"\n"+endMark`).
+- Reason: The wrapped command emits sentinels via `printf` with trailing `\n`, so the end sentinel will always be on its own line. The fallback could prematurely truncate output if the command's output happened to contain the sentinel string.
+- Result: More robust capture avoiding accidental truncation; behavior aligns with sentinel emission guarantees. Build verified.
+
 ### Concurrency Fix (2025-08-12)
 - File: `tools/shell_broker.go`
 - Change: Added `writeMu sync.Mutex` to `ShellSession` and guarded `write()` to serialize writes to the PTY.
