shell WS: proactively close WebSocket when session closes\n\n- agent.go: in writer goroutine, when outCh is closed, send notice then Close() the websocket to unblock reader and terminate handler cleanly.\n- .windsurf_plan.md: document 'WebSocket Close-on-Session-Closed (2025-08-12)'.\n\nBuild: go build ./... passes

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -289,6 +289,12 @@ Next:
 - Reason: Prevent goroutine leaks when the writer fails but the reader remains blocked.
 - Result: Graceful termination of both goroutines on write errors; build verified.
 
+### WebSocket Close-on-Session-Closed (2025-08-12)
+- File: `agent.go`
+- Change: When the shell session's `outCh` closes (e.g., session deleted or server shutdown), the writer goroutine now also calls `conn.Close()` after sending `[session closed]`.
+- Reason: Proactively close the WebSocket to unblock the reader goroutine and avoid resource leaks while waiting for heartbeat timeouts or client disconnects.
+- Result: Handler terminates cleanly on session closure; no lingering connections. Build verified.
+
 ### Backpressure: Non-blocking Enqueue (2025-08-12)
 - Files: `tools/shell_broker.go`, `agent.go`, `tools/shell_session_tool.go`
 - Change: Made `ShellSession.Enqueue([]byte) bool` non-blocking; it returns `false` when the input queue is full. The WebSocket handler now detects a full queue, sends a `[backpressure]` notice to the client, and drops the input. The shell session tool returns a `ToolResponse` error so callers can retry.
