agent: fix gorilla/websocket concurrent write race by serializing all WriteMessage calls with a shared sync.Mutex in /shell/ws handler; guard session-closed notice and backpressure Close frame; update .windsurf_plan.md with change log. Build passes.

--- a/.windsurf_plan.md
+++ b/.windsurf_plan.md
@@ -295,6 +295,12 @@ Next:
 - Reason: Proactively close the WebSocket to unblock the reader goroutine and avoid resource leaks while waiting for heartbeat timeouts or client disconnects.
 - Result: Handler terminates cleanly on session closure; no lingering connections. Build verified.
 
+### WebSocket Write Serialization (2025-08-12)
+- File: `agent.go` (`GET /shell/ws/:id`)
+- Change: Introduced a shared `sync.Mutex` (`writeMu`) and guarded all `conn.WriteMessage` calls in both the writer goroutine and the read loop (including session-closed notice and backpressure Close frame).
+- Reason: gorilla/websocket forbids concurrent writes; previous code could race between the writer and read loop writes, causing panics/data corruption.
+- Result: All WS writes are serialized; race eliminated. Build verified with `go build ./...`.
+
 ### Backpressure: Non-blocking Enqueue (2025-08-12)
 - Files: `tools/shell_broker.go`, `agent.go`, `tools/shell_session_tool.go`
 - Change: Made `ShellSession.Enqueue([]byte) bool` non-blocking; it returns `false` when the input queue is full. The WebSocket handler now detects a full queue, sends a `[backpressure]` notice to the client, and drops the input. The shell session tool returns a `ToolResponse` error so callers can retry.
